--- a/styles/partials/_contacto.scss
+++ b/styles/partials/_contacto.scss
@@ -74,51 +74,97 @@
         column-gap: 10px;
         padding-left: 50px;
         padding-right: 50px;
-    }
-
-    .contacto:nth-of-type(1) {
-        grid-column: 1/3;
-        grid-row: 1/1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        letter-spacing: 5px;
-
-    }
-
-    .formulario:nth-of-type(2) {
-        grid-column: 1/3;
-        grid-row: 2/4;
-        justify-content: center;
-        align-items: flex-start;
-        width: 300px;
-        padding: 30px;
-        border-radius: 10px;
-        background-color: rgb(255, 255, 255);
-        box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
-    }
-
-    .formulario label {
-        font-size: 12px;
-    }
-
-    .formulario textarea {
-        height: 100px;
-        max-height: 100px;
-    }
-
-    #boton {
-        background-color: rgb(56, 54, 88);
-        border: none;
-        color: rgb(223, 223, 223);
-        padding: 15px;
-    }
-
-    #boton:hover {
-        cursor: pointer;
+        .contacto:nth-of-type(1) {
+            grid-column: 1/3;
+            grid-row: 1/1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            letter-spacing: 5px;
+    
+        }
+        
+        .formulario:nth-of-type(2) {
+            grid-column: 1/3;
+            grid-row: 2/4;
+            justify-content: center;
+            align-items: flex-start;
+            width: 300px;
+            padding: 30px;
+            border-radius: 10px;
+            background-color: rgb(255, 255, 255);
+            box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+        }
+        .formulario{
+            label {
+                font-size: 12px;
+            }
+        
+            textarea {
+                height: 100px;
+                max-height: 100px;
+            }
+        
+            #boton {
+                background-color: rgb(56, 54, 88);
+                border: none;
+                color: rgb(223, 223, 223);
+                padding: 15px;
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
     }
 }
-
 @media screen and (min-width: 481px) and (max-width: 760px) {
+    .grillaCont {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        height: 100vh;
+        column-gap: 10px;
+        padding-left: 50px;
+        padding-right: 50px;
+        .contacto:nth-of-type(1) {
+            grid-column: 1/3;
+            grid-row: 1/1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            letter-spacing: 5px;
     
+        }
+    
+        .formulario:nth-of-type(2) {
+            grid-column: 1/3;
+            grid-row: 2/4;
+            justify-content: center;
+            align-items: flex-start;
+            width: 300px;
+            padding: 30px;
+            border-radius: 10px;
+            background-color: rgb(255, 255, 255);
+            box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+        }
+        .formulario{
+            label {
+                font-size: 12px;
+            }
+        
+            textarea {
+                height: 100px;
+                max-height: 100px;
+            }
+        
+            #boton {
+                background-color: rgb(56, 54, 88);
+                border: none;
+                color: rgb(223, 223, 223);
+                padding: 15px;
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+        }
+    }
 }
