--- a/styles/partials/_servicios.scss
+++ b/styles/partials/_servicios.scss
@@ -73,8 +73,6 @@
     }
 }
 
-
-
 .contenedor:nth-of-type(3) {
     grid-column: 6 / 10;
     grid-row: 3 / 3;
@@ -189,54 +187,108 @@
         padding-right: 20px;
         column-gap: 1.5em;
         row-gap: 1.8em;
+        .contenedor:nth-of-type(1) {
+            grid-column: 2 / 6;
+            grid-row: 1 / 1;
+            width: 100%;
+            font-size: 15px;
+            letter-spacing: 5px;
+            padding-top: 1em;
+            display: flex;
+            justify-content: center;
+            text-transform: none;
+        }
+    
+        .contenedor:nth-of-type(2) {
+            grid-column: 2 / 6;
+            grid-row: 2 / 3;
+            height: 100px;
+    
+        }
+    
+        .contenedor:nth-of-type(3) {
+            grid-column: 2 / 6;
+            grid-row: 3 / 4;
+            height: 100px;
+        }
+    
+        .contenedor:nth-of-type(4) {
+            grid-column: 2 / 6;
+            grid-row: 4 / 5;
+            height: 100px;
+        }
+    
+        .contenedor:nth-of-type(5) {
+            grid-column: 2 /6;
+            grid-row: 5 / 6;
+            height: 100px;
+        }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+    
+        }
     }
-
-    .contenedor:nth-of-type(1) {
-        grid-column: 2 / 6;
-        grid-row: 1 / 1;
-        width: 100%;
-        font-size: 15px;
-        letter-spacing: 10px;
-        padding-top: 1em;
-        display: flex;
-        justify-content: center;
-        text-transform: none;
-    }
-
-    .contenedor:nth-of-type(2) {
-        grid-column: 2 / 6;
-        grid-row: 2 / 3;
-        height: 100px;
-
-    }
-
-    .contenedor:nth-of-type(3) {
-        grid-column: 2 / 6;
-        grid-row: 3 / 4;
-        height: 100px;
-    }
-
-    .contenedor:nth-of-type(4) {
-        grid-column: 2 / 6;
-        grid-row: 4 / 5;
-        height: 100px;
-    }
-
-    .contenedor:nth-of-type(5) {
-        grid-column: 2 /6;
-        grid-row: 5 / 6;
-        height: 100px;
-    }
-
-    .grid__sE div img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-
-    }
-
 }
 
 @media screen and (min-width: 481px) and (max-width: 760px) {
+    .grid__sE {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        padding-top: 0;
+        padding-left: 20px;
+        padding-right: 20px;
+        column-gap: 1.5em;
+        row-gap: 1.8em;
+        .contenedor:nth-of-type(1) {
+            grid-column: 2 / 6;
+            grid-row: 1 / 1;
+            width: 100%;
+            font-size: 15px;
+            letter-spacing: 10px;
+            padding-top: 1em;
+            display: flex;
+            justify-content: center;
+            text-transform: none;
+        }
     
+        .contenedor:nth-of-type(2) {
+            grid-column: 2 / 6;
+            grid-row: 2 / 3;
+            height: 100px;
+    
+        }
+    
+        .contenedor:nth-of-type(3) {
+            grid-column: 2 / 6;
+            grid-row: 3 / 4;
+            height: 100px;
+        }
+    
+        .contenedor:nth-of-type(4) {
+            grid-column: 2 / 6;
+            grid-row: 4 / 5;
+            height: 100px;
+        }
+    
+        .contenedor:nth-of-type(5) {
+            grid-column: 2 /6;
+            grid-row: 5 / 6;
+            height: 100px;
+        }
+    
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+    
+        }
+    
+        h3 {
+            font-size: 10px;
+            padding-top: 5px;
+            letter-spacing: 0.3em;
+        }
+    }
 }
