--- a/styles/partials/_skills.scss
+++ b/styles/partials/_skills.scss
@@ -68,60 +68,122 @@
 @media screen and (max-width: 480px) {
     .grid__sK {
         grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(4, 1fr);
-        padding-left: 80px;
-        padding-right: 80px;
-        column-gap: 50px;
-        row-gap: 40px;
+        grid-template-rows: repeat(3, 1fr);
+        height: 125vh;
+        padding: 25px;
+        // padding-left: 15px;
+        // padding-right: 15px;
+        column-gap: 20px;
+        row-gap: 50px;
+        .ae {
+            grid-column: 1 / 1;
+            grid-row: 1/2;
+        }
+    
+        .pr {
+            grid-column: 2/ 2;
+            grid-row: 1/2;
+        }
+    
+        .ps {
+            grid-column: 1 / 1;
+            grid-row: 2/3;
+        }
+    
+        .ai {
+            grid-column: 2 / 2;
+            grid-row: 2/3;
+        }
+    
+        .id {
+            grid-column: 1 / 1;
+            grid-row: 3/4;
+        }
+    
+        .lr {
+            grid-column: 2 / 2;
+            grid-row: 3/4;
+        }
+    
+        .sK__titulo {
+            font-weight: 100;
+            padding: 1rem;
+            font-size: 13px;
+            display: flex;
+            justify-content: center;
+        }
+    
+        h3 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            bottom: 3%;
+            left: 0%;
+        }
     }
-
-    .ae {
-        grid-column: 1 / 1;
-        grid-row: 1/2;
-    }
-
-    .pr {
-        grid-column: 2/ 2;
-        grid-row: 1/2;
-    }
-
-    .ps {
-        grid-column: 1 / 1;
-        grid-row: 2/3;
-    }
-
-    .ai {
-        grid-column: 2 / 2;
-        grid-row: 2/3;
-    }
-
-    .id {
-        grid-column: 1 / 1;
-        grid-row: 3/4;
-    }
-
-    .lr {
-        grid-column: 2 / 2;
-        grid-row: 3/4;
-    }
-
-    .sK__titulo {
-        font-weight: 100;
-        padding: 1rem;
-        font-size: 13px;
-        display: flex;
-        justify-content: center;
-    }
-
-    .grid__sK div h3 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        bottom: 3%;
-        left: 0%;
-    }
-
 }
 
-@media screen and (min-width: 481px) and (max-width: 760px) {}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+    .grid__sK {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        height: 125vh;
+        padding-left: 80px;
+        padding-right: 80px;
+        padding-bottom: 100px;
+        column-gap: 50px;
+        row-gap: 40px;
+        .ae {
+            grid-column: 1 / 1;
+            grid-row: 1/2;
+        }
+    
+        .pr {
+            grid-column: 2/ 2;
+            grid-row: 1/2;
+        }
+    
+        .ps {
+            grid-column: 1 / 1;
+            grid-row: 2/3;
+        }
+    
+        .ai {
+            grid-column: 2 / 2;
+            grid-row: 2/3;
+        }
+    
+        .id {
+            grid-column: 1 / 1;
+            grid-row: 3/4;
+        }
+    
+        .lr {
+            grid-column: 2 / 2;
+            grid-row: 3/4;
+        }
+    
+        .sK__titulo {
+            font-weight: 100;
+            padding: 1rem;
+            font-size: 15px;
+        }
+    
+        img {
+            width: 90%;
+            height: 90%;
+            object-fit: contain;
+            overflow: hidden;
+        }
+    
+        h3 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            bottom: 3%;
+            left: 0%;
+        }
+    }
+}
