--- a/styles/partials/_sobremi.scss
+++ b/styles/partials/_sobremi.scss
@@ -4,7 +4,8 @@
     grid-template-rows: repeat(5, 1fr);
     height: 100vh;
     column-gap: 10px;
-    background-color: rgba(211, 150, 106, 0.466);
+    background-color: $backgroundContenido;
+
     .grid__contenido:nth-of-type(1) {
         grid-column: 2 / 6;
         grid-row: 2 / 3;
@@ -15,13 +16,13 @@
         letter-spacing: 0.5cm;
         color: rgb(63, 63, 63);
     }
-    
+
     .grid__contenido:nth-of-type(2) {
         grid-column: 2 / 6;
         grid-row: 3 / 6;
         line-height: 0.6cm;
     }
-    
+
     .grid__contenido:nth-of-type(3) {
         grid-column: 7 / 12;
         grid-row: 2 / 5;
@@ -35,9 +36,11 @@
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
     }
+
     h1 {
         padding-bottom: 15px;
     }
+
     img {
         width: 100%;
         height: 100%;
@@ -47,6 +50,7 @@
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
     }
+
     .grid__linea {
         position: relative;
         top: 5px;
@@ -56,110 +60,107 @@
         border-radius: 5px;
     }
 }
+
 @media screen and (max-width: 480px) {
     .grid__sM {
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(3, 1fr);
         height: 100vh;
-      }
+        .grid__contenido:nth-of-type(1) {
+            grid-column: 2 / 6;
+            grid-row: 1 / 1;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 2rem;
+            letter-spacing: 0.2cm;
+            height: 100px;
+        }
     
-      .grid__contenido:nth-of-type(1) {
-        grid-column: 2 / 6;
-        grid-row: 1 / 1;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 2rem;
-        letter-spacing: 0.5cm;
-        height: 100px;
-      }
+        .grid__contenido:nth-of-type(2) {
+            grid-column: 2 / 6;
+            grid-row: 2 / 6;
+            font-size: 12px;
+            padding-top: 105px;
+            overflow: hidden;
+        }
     
-      .grid__contenido:nth-of-type(2) {
-        grid-column: 2 / 6;
-        grid-row: 2 / 6;
-        font-size: 12px;
-        padding-top: 105px;
-      }
-    
-      .grid__contenido:nth-of-type(3) {
-        grid-column: 2 /6;
-        grid-row: 1 / 2;
-        line-height: 0.6cm;
-        padding-top: 85px;
-      }
-    
-      .grid__contenido h1 {
-        font-size: 25px;
-      }
-    
-      .grid__contenido img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-bottom-right-radius: 75px;
-        border-bottom-left-radius: 75px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-      }
-    
-      .grid__linea {
-        position: relative;
-        top: 5px;
-        width: 45px;
-      }    
+        .grid__contenido:nth-of-type(3) {
+            grid-column: 2 /6;
+            grid-row: 1 / 2;
+            line-height: 0.6cm;
+            padding-top: 85px;
+        }
+        .grid__contenido{
+            h1 {
+                font-size: 25px;
+            }
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                border-bottom-right-radius: 75px;
+                border-bottom-left-radius: 75px;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+            }
+            .grid__linea {
+                position: relative;
+                top: 5px;
+                width: 45px;
+            }
+        }
+    }
 }
+
 @media screen and (min-width: 481px) and (max-width: 760px) {
     .grid__sM {
         grid-template-columns: repeat(6, 1fr);
         grid-template-rows: repeat(3, 1fr);
         height: 100vh;
-      }
+        .grid__contenido:nth-of-type(1) {
+            grid-column: 2 / 6;
+            grid-row: 1 / 1;
+            justify-content: center;
+            align-items: center;
+            padding-bottom: 2rem;
+            letter-spacing: 0.5cm;
+            height: 100px;
+        }
     
-      .grid__contenido:nth-of-type(1) {
-        grid-column: 2 / 6;
-        grid-row: 1 / 1;
-        justify-content: center;
-        align-items: center;
-        padding-bottom: 2rem;
-        letter-spacing: 0.5cm;
-        height: 100px;
-      }
+        .grid__contenido:nth-of-type(2) {
+            grid-column: 2 / 6;
+            grid-row: 2 / 6;
+            font-size: 12px;
+            padding-top: 105px;
+        }
     
-      .grid__contenido:nth-of-type(2) {
-        grid-column: 2 / 6;
-        grid-row: 2 / 6;
-        font-size: 12px;
-        padding-top: 105px;
-      }
+        .grid__contenido:nth-of-type(3) {
+            grid-column: 2 /6;
+            grid-row: 1 / 2;
+            line-height: 0.6cm;
+            padding-top: 85px;
+        }
+        .grid__contenido{
+
+        }
+        .grid__contenido h1 {
+            font-size: 25px;
+        }
     
-      .grid__contenido:nth-of-type(3) {
-        grid-column: 2 /6;
-        grid-row: 1 / 2;
-        line-height: 0.6cm;
-        padding-top: 85px;
-      }
+        .grid__contenido img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-bottom-right-radius: 75px;
+            border-bottom-left-radius: 75px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
     
-      .grid__contenido h1 {
-        font-size: 25px;
-      }
-    
-      .grid__contenido img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-bottom-right-radius: 75px;
-        border-bottom-left-radius: 75px;
-        border-top-left-radius: 5px;
-        border-top-right-radius: 5px;
-      }
-    
-      .grid__linea {
-        position: relative;
-        top: 5px;
-        width: 45px;
-      }
-     
+        .grid__linea {
+            position: relative;
+            top: 5px;
+            width: 45px;
+        }
+    }
 }
-
-
-
-
