--- a/styles/styles.css
+++ b/styles/styles.css
@@ -396,7 +396,6 @@ footer {
   .pie {
     padding: 15px;
     height: 4rem;
-    background-color: rgba(211, 150, 106, 0.466);
     align-items: flex-start;
   }
   .pie h2 {
@@ -410,7 +409,7 @@ footer {
   .pie .pie__ul {
     display: flex;
     flex-flow: row wrap;
-    gap: 1rem;
+    gap: 1.8rem;
     justify-content: space-evenly;
   }
   .pie .pie__ul li {
@@ -425,7 +424,6 @@ footer {
   .pie {
     padding: 15px;
     height: 4rem;
-    background-color: rgba(211, 150, 106, 0.466);
     align-items: flex-start;
   }
   .pie h2 {
@@ -434,7 +432,7 @@ footer {
     color: rgb(63, 63, 63);
   }
   .pie img {
-    max-width: 2rem;
+    max-width: 1.5rem;
   }
   .pie .pie__ul {
     display: flex;
@@ -513,31 +511,32 @@ footer {
     grid-template-rows: repeat(3, 1fr);
     height: 100vh;
   }
-  .grid__contenido:nth-of-type(1) {
+  .grid__sM .grid__contenido:nth-of-type(1) {
     grid-column: 2/6;
     grid-row: 1/1;
     justify-content: center;
     align-items: center;
     padding-bottom: 2rem;
-    letter-spacing: 0.5cm;
+    letter-spacing: 0.2cm;
     height: 100px;
   }
-  .grid__contenido:nth-of-type(2) {
+  .grid__sM .grid__contenido:nth-of-type(2) {
     grid-column: 2/6;
     grid-row: 2/6;
     font-size: 12px;
     padding-top: 105px;
+    overflow: hidden;
   }
-  .grid__contenido:nth-of-type(3) {
+  .grid__sM .grid__contenido:nth-of-type(3) {
     grid-column: 2/6;
     grid-row: 1/2;
     line-height: 0.6cm;
     padding-top: 85px;
   }
-  .grid__contenido h1 {
+  .grid__sM .grid__contenido h1 {
     font-size: 25px;
   }
-  .grid__contenido img {
+  .grid__sM .grid__contenido img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
@@ -547,7 +546,7 @@ footer {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
   }
-  .grid__linea {
+  .grid__sM .grid__contenido .grid__linea {
     position: relative;
     top: 5px;
     width: 45px;
@@ -559,7 +558,7 @@ footer {
     grid-template-rows: repeat(3, 1fr);
     height: 100vh;
   }
-  .grid__contenido:nth-of-type(1) {
+  .grid__sM .grid__contenido:nth-of-type(1) {
     grid-column: 2/6;
     grid-row: 1/1;
     justify-content: center;
@@ -568,22 +567,22 @@ footer {
     letter-spacing: 0.5cm;
     height: 100px;
   }
-  .grid__contenido:nth-of-type(2) {
+  .grid__sM .grid__contenido:nth-of-type(2) {
     grid-column: 2/6;
     grid-row: 2/6;
     font-size: 12px;
     padding-top: 105px;
   }
-  .grid__contenido:nth-of-type(3) {
+  .grid__sM .grid__contenido:nth-of-type(3) {
     grid-column: 2/6;
     grid-row: 1/2;
     line-height: 0.6cm;
     padding-top: 85px;
   }
-  .grid__contenido h1 {
+  .grid__sM .grid__contenido h1 {
     font-size: 25px;
   }
-  .grid__contenido img {
+  .grid__sM .grid__contenido img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
@@ -593,7 +592,7 @@ footer {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
   }
-  .grid__linea {
+  .grid__sM .grid__linea {
     position: relative;
     top: 5px;
     width: 45px;
@@ -647,6 +646,48 @@ footer {
   filter: opacity(0.9);
 }
 
+@media screen and (max-width: 480px) {
+  .grid__pO {
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    padding: 5px;
+    padding-top: 50px;
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+    row-gap: 10px;
+  }
+  .grid__pO .grid__img1 {
+    grid-column: 2/7;
+    grid-row: 1/2;
+  }
+  .grid__pO .grid__img2 {
+    grid-column: 2/12;
+    grid-row: 2/3;
+  }
+  .grid__pO .grid__img3 {
+    grid-column: 7/12;
+    grid-row: 1/2;
+  }
+  .grid__pO img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    transform: scale(100%);
+    transition: 0.3s ease-in-out;
+    opacity: 0.9;
+  }
+  .grid__pO img:hover {
+    transform: scale(102%);
+    opacity: 1;
+  }
+  .pO__titulo {
+    font-size: 12px;
+    padding-top: 1rem;
+    padding-left: 25px;
+    letter-spacing: 0.2cm;
+  }
+}
 @media screen and (min-width: 481px) and (max-width: 760px) {
   .grid__pO {
     grid-template-columns: repeat(12, 1fr);
@@ -657,36 +698,36 @@ footer {
          column-gap: 5px;
     row-gap: 10px;
   }
-  .grid__img1 {
-    grid-column: 2/7;
+  .grid__pO .grid__img1 {
+    grid-column: 1/8;
     grid-row: 1/2;
   }
-  .grid__img2 {
-    grid-column: 2/12;
+  .grid__pO .grid__img2 {
+    grid-column: 1/8;
     grid-row: 2/3;
   }
-  .grid__img3 {
-    grid-column: 7/12;
-    grid-row: 1/2;
+  .grid__pO .grid__img3 {
+    grid-column: 8/13;
+    grid-row: 1/3;
   }
-  .grid__pO div img {
+  .grid__pO .pO__titulo {
+    font-size: 12px;
+    padding-top: 1rem;
+    padding-left: 25px;
+    letter-spacing: 0.3cm;
+  }
+  .grid__pO img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
     transform: scale(100%);
     transition: 0.3s ease-in-out;
-    opacity: 0.9;
+    opacity: 0.8;
   }
-  .grid__pO div img:hover {
+  .grid__pO img:hover {
     transform: scale(102%);
     opacity: 1;
-  }
-  .pO__titulo {
-    font-size: 12px;
-    padding-top: 1rem;
-    padding-left: 25px;
-    letter-spacing: 0.3cm;
   }
 }
 .grid__sE {
@@ -884,7 +925,56 @@ footer {
          column-gap: 1.5em;
     row-gap: 1.8em;
   }
-  .contenedor:nth-of-type(1) {
+  .grid__sE .contenedor:nth-of-type(1) {
+    grid-column: 2/6;
+    grid-row: 1/1;
+    width: 100%;
+    font-size: 15px;
+    letter-spacing: 5px;
+    padding-top: 1em;
+    display: flex;
+    justify-content: center;
+    text-transform: none;
+  }
+  .grid__sE .contenedor:nth-of-type(2) {
+    grid-column: 2/6;
+    grid-row: 2/3;
+    height: 100px;
+  }
+  .grid__sE .contenedor:nth-of-type(3) {
+    grid-column: 2/6;
+    grid-row: 3/4;
+    height: 100px;
+  }
+  .grid__sE .contenedor:nth-of-type(4) {
+    grid-column: 2/6;
+    grid-row: 4/5;
+    height: 100px;
+  }
+  .grid__sE .contenedor:nth-of-type(5) {
+    grid-column: 2/6;
+    grid-row: 5/6;
+    height: 100px;
+  }
+  .grid__sE img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  .grid__sE {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    padding-top: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    -moz-column-gap: 1.5em;
+         column-gap: 1.5em;
+    row-gap: 1.8em;
+  }
+  .grid__sE .contenedor:nth-of-type(1) {
     grid-column: 2/6;
     grid-row: 1/1;
     width: 100%;
@@ -895,31 +985,36 @@ footer {
     justify-content: center;
     text-transform: none;
   }
-  .contenedor:nth-of-type(2) {
+  .grid__sE .contenedor:nth-of-type(2) {
     grid-column: 2/6;
     grid-row: 2/3;
     height: 100px;
   }
-  .contenedor:nth-of-type(3) {
+  .grid__sE .contenedor:nth-of-type(3) {
     grid-column: 2/6;
     grid-row: 3/4;
     height: 100px;
   }
-  .contenedor:nth-of-type(4) {
+  .grid__sE .contenedor:nth-of-type(4) {
     grid-column: 2/6;
     grid-row: 4/5;
     height: 100px;
   }
-  .contenedor:nth-of-type(5) {
+  .grid__sE .contenedor:nth-of-type(5) {
     grid-column: 2/6;
     grid-row: 5/6;
     height: 100px;
   }
-  .grid__sE div img {
+  .grid__sE img {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+  .grid__sE h3 {
+    font-size: 10px;
+    padding-top: 5px;
+    letter-spacing: 0.3em;
   }
 }
 .grid__sK {
@@ -984,45 +1079,102 @@ footer {
 @media screen and (max-width: 480px) {
   .grid__sK {
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    padding-left: 80px;
-    padding-right: 80px;
-    -moz-column-gap: 50px;
-         column-gap: 50px;
-    row-gap: 40px;
+    grid-template-rows: repeat(3, 1fr);
+    height: 125vh;
+    padding: 25px;
+    -moz-column-gap: 20px;
+         column-gap: 20px;
+    row-gap: 50px;
   }
-  .ae {
+  .grid__sK .ae {
     grid-column: 1/1;
     grid-row: 1/2;
   }
-  .pr {
+  .grid__sK .pr {
     grid-column: 2/2;
     grid-row: 1/2;
   }
-  .ps {
+  .grid__sK .ps {
     grid-column: 1/1;
     grid-row: 2/3;
   }
-  .ai {
+  .grid__sK .ai {
     grid-column: 2/2;
     grid-row: 2/3;
   }
-  .id {
+  .grid__sK .id {
     grid-column: 1/1;
     grid-row: 3/4;
   }
-  .lr {
+  .grid__sK .lr {
     grid-column: 2/2;
     grid-row: 3/4;
   }
-  .sK__titulo {
+  .grid__sK .sK__titulo {
     font-weight: 100;
     padding: 1rem;
     font-size: 13px;
     display: flex;
     justify-content: center;
   }
-  .grid__sK div h3 {
+  .grid__sK h3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    bottom: 3%;
+    left: 0%;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  .grid__sK {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    height: 125vh;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-bottom: 100px;
+    -moz-column-gap: 50px;
+         column-gap: 50px;
+    row-gap: 40px;
+  }
+  .grid__sK .ae {
+    grid-column: 1/1;
+    grid-row: 1/2;
+  }
+  .grid__sK .pr {
+    grid-column: 2/2;
+    grid-row: 1/2;
+  }
+  .grid__sK .ps {
+    grid-column: 1/1;
+    grid-row: 2/3;
+  }
+  .grid__sK .ai {
+    grid-column: 2/2;
+    grid-row: 2/3;
+  }
+  .grid__sK .id {
+    grid-column: 1/1;
+    grid-row: 3/4;
+  }
+  .grid__sK .lr {
+    grid-column: 2/2;
+    grid-row: 3/4;
+  }
+  .grid__sK .sK__titulo {
+    font-weight: 100;
+    padding: 1rem;
+    font-size: 15px;
+  }
+  .grid__sK img {
+    width: 90%;
+    height: 90%;
+    -o-object-fit: contain;
+       object-fit: contain;
+    overflow: hidden;
+  }
+  .grid__sK h3 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1099,7 +1251,7 @@ footer {
     padding-left: 50px;
     padding-right: 50px;
   }
-  .contacto:nth-of-type(1) {
+  .grillaCont .contacto:nth-of-type(1) {
     grid-column: 1/3;
     grid-row: 1/1;
     display: flex;
@@ -1107,7 +1259,7 @@ footer {
     align-items: center;
     letter-spacing: 5px;
   }
-  .formulario:nth-of-type(2) {
+  .grillaCont .formulario:nth-of-type(2) {
     grid-column: 1/3;
     grid-row: 2/4;
     justify-content: center;
@@ -1118,20 +1270,66 @@ footer {
     background-color: rgb(255, 255, 255);
     box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
   }
-  .formulario label {
+  .grillaCont .formulario label {
     font-size: 12px;
   }
-  .formulario textarea {
+  .grillaCont .formulario textarea {
     height: 100px;
     max-height: 100px;
   }
-  #boton {
+  .grillaCont .formulario #boton {
     background-color: rgb(56, 54, 88);
     border: none;
     color: rgb(223, 223, 223);
     padding: 15px;
   }
-  #boton:hover {
+  .grillaCont .formulario #boton:hover {
+    cursor: pointer;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 760px) {
+  .grillaCont {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    height: 100vh;
+    -moz-column-gap: 10px;
+         column-gap: 10px;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .grillaCont .contacto:nth-of-type(1) {
+    grid-column: 1/3;
+    grid-row: 1/1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 5px;
+  }
+  .grillaCont .formulario:nth-of-type(2) {
+    grid-column: 1/3;
+    grid-row: 2/4;
+    justify-content: center;
+    align-items: flex-start;
+    width: 300px;
+    padding: 30px;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 16px 13px 47px rgba(0, 0, 0, 0.425);
+  }
+  .grillaCont .formulario label {
+    font-size: 12px;
+  }
+  .grillaCont .formulario textarea {
+    height: 100px;
+    max-height: 100px;
+  }
+  .grillaCont .formulario #boton {
+    background-color: rgb(56, 54, 88);
+    border: none;
+    color: rgb(223, 223, 223);
+    padding: 15px;
+  }
+  .grillaCont .formulario #boton:hover {
     cursor: pointer;
   }
 }/*# sourceMappingURL=styles.css.map */
