--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -112,24 +112,7 @@ header {
 
         .cabecera__ul {
             /* display: none; */
-            display: flex;
-            flex-flow: column;
-            justify-content: flex-start;
-            background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
-            height: 100vh;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            padding: 0;
-            display: grid;
-            align-content: center;
-            gap: map-get($espaciado, espaciadoMin);
-            padding-left: 5%;
-            transform: var(--state-menu);
-            transition: .3s transform;
-            z-index: 1;
+            @include nav(map-get($espaciado, espaciadoMin));
 
             li {
                 font-size: map-get($tamanos, textNavMin);
@@ -175,25 +158,7 @@ header {
         }
         .cabecera__ul {
             /* display: none; */
-
-            display: flex;
-            flex-flow: column;
-            justify-content: flex-start;
-            background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
-            height: 100vh;
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            padding: 0;
-            display: grid;
-            align-content: center;
-            gap: map-get($espaciado,espaciadoMed);
-            padding-left: 5%;
-            transform: var(--state-menu);
-            transition: .3s transform;
-            z-index: 1;
+            @include nav (map-get($espaciado, espaciadoMed));
             li {
                 font-size: map-get($tamanos,textNavMin);
             }
