--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -3,3 +3,25 @@
     justify-content: center;
     align-items: $items;
 }
+
+@mixin nav ($brecha) {
+    display: flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    background-image: linear-gradient(45deg, rgb(0, 0, 0), rgba(0, 0, 0, 0.0));
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+    display: grid;
+    align-content: center;
+    gap: $brecha;
+    padding-left: 5%;
+    transform: var(--state-menu);
+    transition: .3s transform;
+    z-index: 1;
+    
+}
