--- a/styles/partials/_footer.scss
+++ b/styles/partials/_footer.scss
@@ -20,7 +20,10 @@ footer {
         font-weight: 120px;
         color: map-get($color,color_textTitulo );
     }
-
+    .bx{
+        font-size: 2.3rem;
+        color: black;
+    }
     img {
         max-width: 2.3rem;
     }
