--- a/styles/styles.css
+++ b/styles/styles.css
@@ -370,6 +370,10 @@ footer {
   font-weight: 120px;
   color: rgb(63, 63, 63);
 }
+.pie .bx {
+  font-size: 2.3rem;
+  color: black;
+}
 .pie img {
   max-width: 2.3rem;
 }
